another attempt to fix overflow scroll mobile

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,6 +1,7 @@
 html, body {
   height: 100%;
   overflow-x: hidden;
+  overflow: scroll;
   -webkit-overflow-scrolling: touch;
 }
 body {
